--- a/.github/workflows/slash.yaml
+++ b/.github/workflows/slash.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Slash Command Dispatch
         uses: peter-evans/slash-command-dispatch@e1b4e266bc781656359bb7e462e228daf68c04f6 # v5.0.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SBR_BOT_TOKEN }}
           config: >
             [
               {
