--- a/.github/workflows/chatops_cherrypick.yaml
+++ b/.github/workflows/chatops_cherrypick.yaml
@@ -71,6 +71,7 @@ jobs:
           GH_TOKEN: ${{ secrets.SBR_BOT_TOKEN }}
         run: |
           # Get the current job logs and extract cherry-pick output
+          gh run view ${{ github.run_id }} --log --repo ${{ github.repository }}
           LOGS=$(gh run view ${{ github.run_id }} --log --repo ${{ github.repository }} 2>&1 | grep -A 50 "Perform cherry-pick" | tail -30 || echo "Unable to fetch logs")
           echo $LOGS
           # Escape for GitHub output
